/*
   @Author: Bhaskar S
   @Blog:   https://www.polarsparc.com
   @Date:   28 Nov 2020
*/

syntax = "proto3";

package unary;

option java_multiple_files = true;
option java_package = "com.polarsparc.gun";

message GreetRequest {
  string name = 1;
}

message GreetResponse {
  string message = 1;
}

service GreetService {
  rpc greet(GreetRequest) returns (GreetResponse);
}
